[package]
name = "piri"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
authors = ["Matilde Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/morr0ne/piri"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.100"
niri-ipc = "25.11.0"
regex = "1.12.2"
sap = "0.0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "ansi",
    "fmt",
    "std",
] }
